Wire in CityCodes from ClusterProfiles during workload validation.
- Updated the dev container to mount in the expected network-services-operator
path, and added some constants for condition types.
- Added missing kustomize config files.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,5 +27,8 @@
       ]
     }
   },
-  "onCreateCommand": "bash .devcontainer/post-install.sh"
+  "onCreateCommand": "bash .devcontainer/post-install.sh",
+  "mounts": [
+    "source=${localWorkspaceFolder}/../network-services-operator,target=/workspaces/network-services-operator,type=bind"
+  ]
 }
