--- a/config/crd/bases/compute.datumapis.com_workloaddeployments.yaml
+++ b/config/crd/bases/compute.datumapis.com_workloaddeployments.yaml
@@ -18,8 +18,11 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
-    - jsonPath: .status.clusterRef.name
-      name: Cluster
+    - jsonPath: .status.location.namespace
+      name: Location Namespce
+      type: string
+    - jsonPath: .status.location.name
+      name: Location Name
       type: string
     - jsonPath: .status.conditions[?(@.type=="Available")].status
       name: Available
@@ -898,19 +901,6 @@ spec:
           status:
             description: WorkloadDeploymentStatus defines the observed state of WorkloadDeployment
             properties:
-              clusterRef:
-                description: The cluster which the deployment has been assigned to
-                properties:
-                  name:
-                    description: Name of a datum cluster
-                    type: string
-                  namespace:
-                    description: Namespace for the datum cluster
-                    type: string
-                required:
-                - name
-                - namespace
-                type: object
               conditions:
                 description: |-
                   Represents the observations of a deployment's current state.
@@ -980,6 +970,20 @@ spec:
                 description: The desired number of instances to be managed by a deployment.
                 format: int32
                 type: integer
+              location:
+                description: The location which the deployment has been scheduled
+                  to
+                properties:
+                  name:
+                    description: Name of a datum location
+                    type: string
+                  namespace:
+                    description: Namespace for the datum location
+                    type: string
+                required:
+                - name
+                - namespace
+                type: object
               replicas:
                 description: The number of instances created by a deployment
                 format: int32
