--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,8 +6,19 @@ on:
     types: ['published']
 
 jobs:
-  publish:
+  publish-container-image:
     uses: datum-cloud/actions/.github/workflows/publish-docker.yaml@v1.0.0
     with:
       image-name: workload-operator
+    secrets: inherit
+
+  publish-kustomize-bundles:
+    permissions:
+      id-token: write
+      contents: read
+      packages: write
+    uses: datum-cloud/actions/.github/workflows/publish-kustomize-bundle.yaml@v1.2.0
+    with:
+      bundle-name: ghcr.io/datum-cloud/workload-operator-kustomize
+      bundle-path: config
     secrets: inherit
