--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -10,7 +10,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: workload-operator
+  name: controller-manager
   namespace: system
   labels:
     control-plane: controller-manager
