--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -16,7 +16,7 @@ namePrefix: workload-operator-
 
 resources:
 # - ../crd
-- ../rbac
+# - ../rbac
 - ../manager
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
