chore: add resource metrics for datum cloud

--- a/config/resource-metrics/instances.yaml
+++ b/config/resource-metrics/instances.yaml
@@ -5,7 +5,7 @@ spec:
         group: compute.datumapis.com
         kind: Instance
         version: v1alpha
-      metricNamePrefix: "instance"
+      metricNamePrefix: "datum_cloud_compute_instance"
       labelsFromPath:
         namespace: [metadata, namespace]
         name: [metadata, name]
