--- a/config/resource-metrics/workload-deployments.yaml
+++ b/config/resource-metrics/workload-deployments.yaml
@@ -5,7 +5,7 @@ spec:
         group: compute.datumapis.com
         kind: WorkloadDeployment
         version: v1alpha
-      metricNamePrefix: "workload_deployment"
+      metricNamePrefix: "datum_cloud_compute_workload_deployment"
       labelsFromPath:
         namespace: [metadata, namespace]
         name: [metadata, name]
