Leverage the multicluster-runtime library to enable the operator to manage resources from many control planes.
The Datum multicluster provider library has been copied from the
network-services-operator project. A future iteration will move the
provider into its own library that can be shared across projects. We
decided to copy the code until it's stabalized, which it seems to be
nearing.

Additional changes include:

- Addition of structured configuration provided via a config file, with
  support for default values.
- Support for reading webhook certificates from secrets, simplifying
  development.

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,6 +7,7 @@ rules:
 - apiGroups:
   - compute.datumapis.com
   resources:
+  - instances
   - workloaddeployments
   - workloads
   verbs:
@@ -20,6 +21,7 @@ rules:
 - apiGroups:
   - compute.datumapis.com
   resources:
+  - instances/finalizers
   - workloaddeployments/finalizers
   - workloads/finalizers
   verbs:
@@ -27,6 +29,7 @@ rules:
 - apiGroups:
   - compute.datumapis.com
   resources:
+  - instances/status
   - workloaddeployments/status
   - workloads/status
   verbs:
