--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -63,6 +63,7 @@ spec:
         args:
           - --leader-elect
           - --health-probe-bind-address=:8081
+          - --server-config=/config/config.yaml
         image: controller:latest
         name: manager
         securityContext:
@@ -91,5 +92,12 @@ spec:
           requests:
             cpu: 10m
             memory: 64Mi
+        volumeMounts:
+        - name: config
+          mountPath: /config
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
+      volumes:
+      - name: config
+        configMap:
+          name: config
