--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -6,8 +6,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: example.com/datum-workload-operator
-  newTag: v0.0.1
+  newName: workload-operator
+  newTag: latest
 configMapGenerator:
 - files:
   - config.yaml
