feat: Direct Instance Lifecycle Control
Instance control:

Introduced an instance control library, with a stateful implementation
inspired by Kubernetes StatefulSets. The implementation does not
consider adoption of instances, which are always owned by a
WorkloadDeployment. This library returns a set of actions for
the caller to consider and execute. It is possible for actions
to be returned that will not be executed, but can be useful
in troubleshooting or bringing visibility into the progress of
a rollout. This design also opens the door for allowing bursting
or parallel application of instance changes.

Instance control is managed at the context of a WorkloadDeployment,
with actions being built up by the instance control strategy
chosen, and executed by the reconciler.

Once an instance has no scheduling gates, the provider responsible for
the location which it is attached to will be responsible for for
provisioning the instance and updating the `Programmed` and `Running`
conditions with success or failure information. Once an Instance is seen as
both Programmed and Running, it will be considered Ready.

Scheduling gates:

An instance can have one or more scheduling gates added to its spec,
which are used to indicate to other systems that the instance may not
be at a state to be processed. The initial scheduling gate of `Network`
results in instances not being processed until the network they are
attached to is ready. Scheduling gates for quota claims, volumes,
or other dependencies should be expected to come in future revisions.

CRD improvements:

- Refined default conditions and printer columns for Workloads,
WorkloadDeployments, and Instances.
- Added many more condition reasons to communicate the state of resources.
- Added ReadyReplicas to Workloads and WorkloadDeployments.

Network readiness:

The operator will now ensure that networks being attached to
are ready for use, and at least one subnet has been issued to any
network context with an attached insta

--- a/config/crd/bases/compute.datumapis.com_instances.yaml
+++ b/config/crd/bases/compute.datumapis.com_instances.yaml
@@ -18,18 +18,20 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
-    - jsonPath: .status.conditions[?(@.type=="Available")].status
-      name: Available
+    - jsonPath: .status.conditions[?(@.type=="Ready")].status
+      name: Ready
       type: string
-    - jsonPath: .status.conditions[?(@.type=="Available")].reason
+    - jsonPath: .status.conditions[?(@.type=="Ready")].reason
       name: Reason
       type: string
     - jsonPath: .status.networkInterfaces[0].assignments.networkIP
       name: Network IP
-      priority: 1
       type: string
     - jsonPath: .status.networkInterfaces[0].assignments.externalIP
       name: External IP
+      type: string
+    - jsonPath: .status.conditions[?(@.type=="Ready")].message
+      name: Message
       priority: 1
       type: string
     name: v1alpha
@@ -55,8 +57,48 @@ spec:
           metadata:
             type: object
           spec:
-            description: InstanceSpec defines the desired state of Instance
+            description: Spec defines the desired state of an Instance.
             properties:
+              controller:
+                description: Controller contains settings driven by the controller
+                  managing the instance.
+                properties:
+                  schedulingGates:
+                    description: |-
+                      SchedulingGates is a list of gates that must be satisfied before the
+                      instance can be scheduled.
+                    items:
+                      properties:
+                        name:
+                          description: The name of the gate.
+                          type: string
+                      required:
+                      - name
+                      type: object
+                    type: array
+                    x-kubernetes-list-map-keys:
+                    - name
+                    x-kubernetes-list-type: map
+                  templateHash:
+                    description: TemplateHash is the hash of the instance template
+                      applied for this instance.
+                    type: string
+                required:
+                - templateHash
+                type: object
+              location:
+                description: The location which the instance has been scheduled to
+                properties:
+                  name:
+                    description: Name of a datum location
+                    type: string
+                  namespace:
+                    description: Namespace for the datum location
+                    type: string
+                required:
+                - name
+                - namespace
+                type: object
               networkInterfaces:
                 description: Network interface configuration.
                 items:
@@ -519,6 +561,9 @@ spec:
                 - resources
                 type: object
               volumes:
+                description: |-
+                  Volumes that must be available to attach to an instance's containers or
+                  Virtual Machine.
                 items:
                   properties:
                     configMap:
@@ -766,7 +811,24 @@ spec:
             - runtime
             type: object
           status:
-            description: InstanceStatus defines the observed state of Instance
+            default:
+              conditions:
+              - lastTransitionTime: "1970-01-01T00:00:00Z"
+                message: Waiting for controller
+                reason: Pending
+                status: Unknown
+                type: Programmed
+              - lastTransitionTime: "1970-01-01T00:00:00Z"
+                message: Waiting for controller
+                reason: Pending
+                status: Unknown
+                type: Running
+              - lastTransitionTime: "1970-01-01T00:00:00Z"
+                message: Waiting for controller
+                reason: Pending
+                status: Unknown
+                type: Ready
+            description: Status defines the current state of an Instance.
             properties:
               conditions:
                 description: |-
@@ -827,6 +889,17 @@ spec:
                   - type
                   type: object
                 type: array
+              controller:
+                description: Controller contains status information about the controller
+                  managing the instance.
+                properties:
+                  observedTemplateHash:
+                    description: ObservedTemplateHash is the hash of the instance
+                      template applied for this instance.
+                    type: string
+                required:
+                - observedTemplateHash
+                type: object
               networkInterfaces:
                 description: Network interface information
                 items:
