--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -7,7 +7,11 @@ on:
 
 jobs:
   publish-container-image:
-    uses: datum-cloud/actions/.github/workflows/publish-docker.yaml@v1.4.0
+    permissions:
+      id-token: write
+      contents: read
+      packages: write
+    uses: datum-cloud/actions/.github/workflows/publish-docker.yaml@v1.5.0
     with:
       image-name: workload-operator
     secrets: inherit
@@ -17,7 +21,7 @@ jobs:
       id-token: write
       contents: read
       packages: write
-    uses: datum-cloud/actions/.github/workflows/publish-kustomize-bundle.yaml@v1.4.0
+    uses: datum-cloud/actions/.github/workflows/publish-kustomize-bundle.yaml@v1.5.0
     with:
       bundle-name: ghcr.io/datum-cloud/workload-operator-kustomize
       bundle-path: config
