--- a/config/iam/kustomization.yaml
+++ b/config/iam/kustomization.yaml
@@ -4,7 +4,7 @@
 #
 # This is created as a component so it can be included with other
 # kustomizations.
-apiVersion: kustomization.config.k8s.io/v1alpha1
+apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 resources:
