chore: fix role inheritance

--- a/config/iam/roles/compute-admin.yaml
+++ b/config/iam/roles/compute-admin.yaml
@@ -1,14 +1,14 @@
 apiVersion: iam.miloapis.com/v1alpha1
 kind: Role
 metadata:
-  name: compute-admin
+  name: compute.datumapis.com-admin
   annotations:
     kubernetes.io/display-name: Compute Admin
     kubernetes.io/description: "Full access to all compute resources"
 spec:
   launchStage: Beta
   inheritedRoles:
-    - name: compute.datumapis.com-admin
+    - name: compute.datumapis.com-viewer
   includedPermissions:
     - compute.datumapis.com/workloads.create
     - compute.datumapis.com/workloads.update
